--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "homepage": "https://github.com/lolopinto/ent-starter#readme",
   "dependencies": {
     "@lolopinto/ent": "0.0.95",
+    "@lolopinto/ent-email": "0.0.3",
+    "@lolopinto/ent-passport": "0.0.4",
     "@types/express": "^4.17.9",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
