--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "./dist",
     "target": "es2015",
     "strictNullChecks": true,
+    "sourceMap": true,
     "downlevelIteration": true,
     "baseUrl": ".",
     "moduleResolution": "node",
