--- a/package.json
+++ b/package.json
@@ -29,9 +29,17 @@
     "@lolopinto/ent": "0.0.95",
     "@lolopinto/ent-email": "0.0.3",
     "@lolopinto/ent-passport": "0.0.4",
-    "@types/express": "^4.17.9",
+    "@lolopinto/ent-password": "0.0.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.4.0"
+  },
+  "devDependencies": {
+    "@lolopinto/ent-graphql-tests": "0.0.14",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.1",
+    "@types/jest": "^26.0.20"
   }
 }
