Pull from main (having lost laptop to apple replacement and deving elsewhere) and make sure works locally

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,7 @@
 dialect: postgres
 database: ent-starter
-user: tomelliott
+  # user: tomelliott
+user: tom
 password: ''
 host: localhost
 port: 5432
