--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "compile": "rm -rf dist && ./node_modules/.bin/ent-custom-compiler",
     "start": "docker-compose -f docker-compose.dev.yml up",
-    "start-fast": "npm run compile && node dist/graphql/index.js",
+    "start-fast": "npm run compile && node --inspect=0.0.0.0 dist/graphql/index.js",
     "codegen": "docker-compose -f docker-compose.dev.yml run --rm app tsent codegen",
     "rebuild-image": "docker-compose -f docker-compose.dev.yml build",
     "upgrade": "docker-compose -f docker-compose.dev.yml run --rm app tsent upgrade"
